--- a/index.html
+++ b/index.html
@@ -1,56 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title>HTML Clean Up Lab</title>
+<head>
+  <title>HTML Clean Up Lab</title>
 </head>
-
-
-
 <body>
-<div id="page-wrapper">
-<header id="header">
-			<a id="logo1" href="index.html"><img src="logo3.png"></a>
-			<h1>My Demo Site</h1>
-</header>
-<nav id="main-nav">
-<ul>
-<li><a href = "http://www.iit.edu">IIT Home</a></li>
-<li><a href="http://www.google.com">Google</a></li>
-<li><a href="http://www.microsoft.com">Microsoft</a></li>
-<li><a href = "http://www.cnn.com">CNN</a></li>
-<li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
-</ul>
-</nav>
+  <div id="page-wrapper">
+    <header id="header">
+      <a id="logo1" href="index.html"><img src="logo3.png" alt="logo3"></a>
+      <h1>My Demo Site</h1>
+    </header>
+    <nav id="main-nav">
+      <ul>
+        <li>
+          <a href="http://www.iit.edu">IIT Home</a>
+        </li>
+        <li>
+          <a href="http://www.google.com">Google</a>
+        </li>
+        <li>
+          <a href="http://www.microsoft.com">Microsoft</a>
+        </li>
+        <li>
+          <a href="http://www.cnn.com">CNN</a>
+        </li>
+        <li>
+          <a href="http://admissions.iit.edu">IIT Admissions</a>
+        </li>
+      </ul>
+    </nav>
     <main id="content-wrapper">
       <div id="main-content">
-        <h2><b>This is our h2 Tag</b></h2>
-          <img class="imageR" src="./images/main.png">
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <h2><b>This is our h2 Tag</b></h2><img class="imageR" src="./images/main.png" alt="main">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <ul id="bul1">
-          <li> List 1</li>
+          <li>List 1</li>
           <li>List 2</li>
-          <li> List 3</li>
+          <li>List 3</li>
           <li>List 4</li>
         </ul>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <ul id="bul2"><li>List 1</li><li>List 2</li><li>List 3</li><li>List 4</li>        </ul>
-       <div id="center">
-          <iframe width="400" height="300" src="https://github.com/dkriegls/coursera/blob/main/labs/lab4/images/logo3.png?raw=true" allowfullscreen></iframe>
-        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <ul id="bul2">
+          <li>List 1</li>
+          <li>List 2</li>
+          <li>List 3</li>
+          <li>List 4</li>
+        </ul>
+        <div id="center"><iframe><img alt="logo3.png" src="https://github.com/dkriegls/coursera/blob/main/labs/lab4/images/logo3.png?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 fzFXnm"></iframe><img alt="main.png" src="https://github.com/dkriegls/coursera/blob/main/labs/lab4/images/main.png?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 fzFXnm"></div>
       </div>
-    <aside id="side-content">
-   <h3>Interesting Articles</h3>
-     <ol id="news">
-      <a href="#"><li>Article 1</li></a>
-      <p>Preview of very interesting article article</p>
-      <a href="#"><li>Article 2</li></a>
-      <p> Preview of very interesting article article  </p>
-      <a href="#"><li>Article 3</li></a>
-      <p>Preview of very interesting article article</p>
-      <a href="#"><li>Article 4</li></a>
-      <p> Preview of very interesting article article  </p>
-     </ol>
-    </aside>
-   </main>
+      <aside id="side-content">
+        <h3>Interesting Articles</h3>
+        <ol id="news">
+          <a href="#"></a>
+          <li>Article 1
+            <p>Preview of very interesting article article</p><a href="#">
+            <ul>
+              <li>Article 2</li>
+              <p>Preview of very interesting article article</p><a href="#"></a>
+              <li>Article 3</li>
+              <p>Preview of very interesting article article</p><a href="#"></a>
+              <li>Article 4</li>
+              <p>Preview of very interesting article article</p>
+            </ul></a>
+          </li>
+        </ol>
+      </aside>
+    </main>
+    <footer id="footer">
+      Footer Content is here
+    </footer>
+    <hr>
+  </div>
+</body>
+</html>
