--- a/index.html
+++ b/index.html
@@ -1,77 +1,111 @@
+<?php
+
+//Make short Variable names
+$firstName = $_REQUEST['first_name_field'];
+$lastName = $_REQUEST['last_name_field'];
+$phone = $_REQUEST['phone_field'];
+$email = $_REQUEST['email_field'];
+$hidden = $_REQUEST['hidden_field'];
+$comments = $_REQUEST['comments_field'];
+$gender = $_REQUEST['gender_field'];
+$available = $_REQUEST['available_field'];
+$age = $_REQUEST['age_field'];
+
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>HTML Clean Up Lab</title>
+  <meta charset="utf-8">
+  <title>Lab Form Processing Script</title>
+    <style>
+    .box {
+      border: 1px solid #444;
+      background-color: #ccc;
+      margin: 20px 20px;
+      padding: 5px 20px;
+    }
+  </style>
 </head>
 <body>
-  <div id="page-wrapper">
-    <header id="header">
-      <a id="logo1" href="index.html"><img src="logo3.png" alt="logo3"></a>
-      <h1>My Demo Site</h1>
-    </header>
-    <nav id="main-nav">
-      <ul>
-        <li>
-          <a href="http://www.iit.edu">IIT Home</a>
-        </li>
-        <li>
-          <a href="http://www.google.com">Google</a>
-        </li>
-        <li>
-          <a href="http://www.microsoft.com">Microsoft</a>
-        </li>
-        <li>
-          <a href="http://www.cnn.com">CNN</a>
-        </li>
-        <li>
-          <a href="http://admissions.iit.edu">IIT Admissions</a>
-        </li>
-      </ul>
-    </nav>
-    <main id="content-wrapper">
-      <div id="main-content">
-        <h2><b>This is our h2 Tag</b></h2><img class="imageR" src="./images/main.png" alt="main">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <ul id="bul1">
-          <li>List 1</li>
-          <li>List 2</li>
-          <li>List 3</li>
-          <li>List 4</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <ul id="bul2">
-          <li>List 1</li>
-          <li>List 2</li>
-          <li>List 3</li>
-          <li>List 4</li>
-        </ul>
-        <div id="center"><iframe><img alt="logo3.png" src="https://github.com/dkriegls/coursera/blob/main/labs/lab4/images/logo3.png?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 fzFXnm"></iframe><img alt="main.png" src="https://github.com/dkriegls/coursera/blob/main/labs/lab4/images/main.png?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 fzFXnm"></div>
-      </div>
-      <aside id="side-content">
-        <h3>Interesting Articles</h3>
-        <ol id="news">
-          <a href="#"></a>
-          <li>Article 1
-            <p>Preview of very interesting article article</p><a href="#">
-            <ul>
-              <li>Article 2</li>
-              <p>Preview of very interesting article article</p><a href="#"></a>
-              <li>Article 3</li>
-              <p>Preview of very interesting article article</p><a href="#"></a>
-              <li>Article 4</li>
-              <p>Preview of very interesting article article</p>
-            </ul></a>
-          </li>
-        </ol>
-      </aside>
-    </main>
-    <footer id="footer">
-      Footer Content is here
-    </footer>
-    <hr>
+  <div style="text-align:center;">
+    <h2>Lab Form Processing Script</h2>
+    <p>This page will display the results of the form that was submitted to it.</p>
   </div>
+  <hr><br>
+  <h1>Thank you for your Lab form submission, <?php echo htmlentities($firstName) ?>!</h1>
+  <div class="box">
+  <h2>This section contains the information provided in the my info section:</h2>
+    <p><strong>First Name:</strong> <?php echo htmlentities($firstName) ?></p>
+    <p><strong>Last Name:</strong> <?php echo htmlentities($lastName) ?></p>
+    <p><strong>Phone Number:</strong> <?php echo htmlentities($phone) ?></p>
+    <p><strong>Email Address:</strong> <?php echo htmlentities($email) ?></p>
+    <p><strong>Gender:</strong> <?php echo htmlentities($gender) ?></p>
+    <p><strong>Age:</strong> <?php echo htmlentities($age) ?></p>
+  </div>
+  <div class="box">
+  <h2>This section contains the information provided in the availibility section:</h2>
+  <h3>Days Selected as Available:</h3>
+  <?php
+    if (is_array($available)){
+      foreach ($available as $ckvalue) {
+        echo ('<p>' . htmlentities($ckvalue) . '</p>');
+      }
+    } else {
+      echo ('<p>' . htmlentities($available) . '</p>');
+    }
+  ?>
+  <h3>Comments:</h3>
+  <p><?php echo nl2br(htmlentities($comments)) ?></p>
+  </div>
+  <div class="box">
+  <h2>This section contains the hidden information:</h2>
+    <p><strong>HTML Form created by:</strong> <?php echo htmlentities($hidden) ?></p>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Volunteer Form</h1>
+  <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
+    <fieldset>
+      <legend>My Info</legend>
+      <div><label>first name: <input size="100" type="text" name="first_name_field"></label></div>
+      <div><label>last name: <input size="100" type="text" name="last_name_field"></label></div>
+      <div><label>phone: <input size="100" type="text" name="phone_field"></label></div>
+      <div><label>email: <input size="100" type="text" name="email_field"></label></div>
+      <div>Gender: </div>
+      <div>
+        <label>Male <input type="radio" name="gender_field" value="male"></label>
+        <label>Female <input type="radio" name="gender_field" value="female"></label>
+      </div>
+      <div>Age: </div>
+      <select name="age_field">
+        <option>under 18</option>
+        <option>over 18</option>
+      </select>
+    </fieldset>
+    <fieldset>
+      <legend>My Availability</legend>
+      <h3>Days Available:</h3>
+      <div>
+        <div><label>Sunday <input type="checkbox" name="available_field[]" value="sunday"></label></div>
+        <div><label>Monday <input type="checkbox" name="available_field[]" value="monday"></label></div>
+        <div><label>Tuesday <input type="checkbox" name="available_field[]" value="tuesday"></label></div>
+        <div><label>Wednesday <input type="checkbox" name="available_field[]" value="wednesday"></label></div>
+        <div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label></div>
+        <div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label></div>
+        <div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label></div>
+        <h3>Comments</h3>
+        <textarea name="comments_field"></textarea>
+      </div>
+    </fieldset>
+    <input type="hidden" name="hidden_field" value="dkriegls">
+    <input type="submit">
+  </form>
 </body>
 </html>
